--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="main.js" type="module"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Somogyvári Márton</title>
 </head>
 <body>
     <article></article>
